--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Preload Element -->
+    <div class="preloader">
+      <img src="/preloader2.gif" alt="preloader">
+    </div>
+
     <!-- Header Element -->
     <header>  
       <video class="video-container" muted autoplay loop>
